--- a/src/components/MainNav/Panel/Notifications/Notifications.scss
+++ b/src/components/MainNav/Panel/Notifications/Notifications.scss
@@ -1,5 +1,5 @@
 $primary: #2c54ac;
-$primaryLight: #2955a7;
+$primaryLight: #2e5bb1;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $notifications: #e49d45;
