--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,7 +1,7 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2955a7;
-$primaryActive: #2c5cb4;
+$primaryLight: #2e5bb1;
+$primaryActive: #224fa0;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
@@ -106,7 +106,7 @@ $textColor: #555;
         }
 
         .italic, .user, .paste {
-          color: #44a8b3;
+          color: $primary;
         }
 
         .trash {
@@ -114,7 +114,7 @@ $textColor: #555;
         }
 
         .book {
-          color: $secondary;
+          color: $primary;
         }
       }
     }
