--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -1,6 +1,6 @@
 $white: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2c5cb4;
+$primaryLight: #2e5bb1;
 $secondary: #fcac04;
 $secondaryLight: #fdb51c;
 $vGreen: green !important;
