--- a/src/components/ControlPanel/Hotkeys/Hotkeys.scss
+++ b/src/components/ControlPanel/Hotkeys/Hotkeys.scss
@@ -1,7 +1,7 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2955a7;
-$primaryActive: #2c5cb4;
+$primaryLight: #2e5bb1;
+$primaryActive: #224fa0;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
