--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,6 +1,6 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2c5cb4;
+$primaryLight: #2e5bb1;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
