--- a/src/components/TopPanel/TopPanel.scss
+++ b/src/components/TopPanel/TopPanel.scss
@@ -1,7 +1,7 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2955a7;
-$primaryActive: #2c5cb4;
+$primaryLight: #2e5bb1;
+$primaryActive: #224fa0;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
@@ -47,7 +47,7 @@ $textColor: #555;
 
     > div:nth-child(2) a {
       &:hover {
-        color: $primaryLight;
+        color: $secondaryActive;
       }
 
       &:active {
