--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,5 +1,11 @@
-$primaryLight: #2955a7;
-$primaryActive: #2c5cb4;
+$whiteBackground: #ececec;
+$primary: #2c54ac;
+$primaryLight: #2e5bb1;
+$primaryActive: #224fa0;
+$secondary: #fcac04;
+$secondaryLight: #f8b014;
+$secondaryActive: #fdb51c;
+$textColor: #555;
 
 .App {
   font-size: 25px;
@@ -83,5 +89,75 @@ button:active, a:active, .period:active {
 button {
   &:hover, &:active, &:focus {
     outline: none;
+  }
+}
+
+.fixed-buttons.fm {
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  > div {
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 50%;
+    background: #c3c3c3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    &:hover {
+      background: $primaryLight;
+    }
+  
+    &:active {
+      background: $primaryActive;
+    }
+  
+    button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: none;
+      border: none;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      transform: scale(1.32);
+  
+      svg {
+        color: white;
+        height: 70%;
+      }
+    }
+  }
+
+  > div:first-child {
+    background: $primary;
+
+    &:hover {
+      background: $primaryLight;
+
+      button svg {
+        color: white;
+      }
+    }
+
+    &:active {
+      background: $primaryActive;
+    }
+
+    button {
+      padding: 0;
+
+      svg {
+        color: white;
+      }
+    }
   }
 }
