--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -137,19 +137,20 @@ $textColor: #555;
     div.bell {
       width: auto;
       color: $secondary;
+      padding: 3px 0;
 
       svg {
         border-radius: 30px;
-        width: 25px;
-        height: 25px;
-        padding: 5px;
-
-        &:hover {
-          background: rgba(255, 255, 255, 0.4);
-        }
+        width: 100%;
+        height: 100%;
+        padding: 3px;
 
         &:hover {
           background: #795222;
+        }
+
+        &:active {
+          background: #866032;
         }
       }
     }
