Fixed server update and resolved softaculous issue when there was no description beneath it.

--- a/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
+++ b/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
@@ -33,7 +33,7 @@ $successColor: $addButtonBackground;
   
     div.error,
     div.success {
-      width: fit-content;
+      width: fit-content !important;
   
       span {
         font-weight: bold;
