--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -146,7 +146,7 @@ $textColor: #555;
         padding: 3px;
 
         &:hover {
-          background: #795222;
+          background: #79522294;
         }
 
         &:active {
