--- a/src/components/MainNav/Panel/Notifications/Notifications.scss
+++ b/src/components/MainNav/Panel/Notifications/Notifications.scss
@@ -1,10 +1,16 @@
+$whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
+$secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $notifications: #e49d45;
 $notificationsLight: #de9234;
 $notificationsActive: #6f4e2b;
+$textColor: #555;
 
 .top-panel .profile-menu {
   div {
