--- a/src/components/WebDomain/Edit/SslSupport/SslSupport.scss
+++ b/src/components/WebDomain/Edit/SslSupport/SslSupport.scss
@@ -1,7 +1,7 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
 $primaryLight: #2e5bb1;
-$primaryActive: #224fa0;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
