--- a/src/components/Backup/RestoreSetting/RestoreSetting.scss
+++ b/src/components/Backup/RestoreSetting/RestoreSetting.scss
@@ -1,9 +1,12 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $textColor: #555;
 
 .backups-restore-settings {
@@ -51,7 +54,13 @@ $textColor: #555;
         }
 
         &:hover {
+          color: $hoverButtonText;
           background-color: $primaryLight;
+        }
+        
+        &:hover {
+          color: $activeButtonText;
+          background-color: $primaryActive;
         }
       }
     }
