--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,9 +1,12 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $textColor: #555;
 
 .login-page {
@@ -82,8 +85,15 @@ $textColor: #555;
           border-radius: 3px;
 
           &:hover {
+            color: $primary;
             border: 1px solid $primaryLight;
             background-color: $primaryLight;
+          }
+
+          &:active {
+            color: #fafafa;
+            border: 1px solid $primary;
+            background-color: $primary;
           }
 
           .disabled {
