--- a/src/components/MainNav/Stat-menu/Menu.scss
+++ b/src/components/MainNav/Stat-menu/Menu.scss
@@ -1,10 +1,12 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
-$primaryActive: #224fa0;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $textColor: #555;
 
 .menu-wrapper {
