--- a/src/components/MainNav/Toolbar/LeftButton/LeftButton.scss
+++ b/src/components/MainNav/Toolbar/LeftButton/LeftButton.scss
@@ -1,10 +1,12 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
-$primaryActive: #224fa0;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
 $secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $textColor: #555;
 
 .l-menu {
@@ -28,6 +30,26 @@ $textColor: #555;
 
       span.add {
         display: block;
+        color: $hoverButtonText;
+        background: $primaryLight;
+      }
+
+      svg {
+        color: $hoverButtonText;
+      }
+    }
+
+    &:active {
+      background: $primary;
+
+      span.add {
+        display: block;
+        color: $activeButtonText;
+        background: $primary;
+      }
+
+      svg {
+        color: $activeButtonText;
       }
     }
 
