--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,12 +1,15 @@
-$black: #000;
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
-$primaryActive: #224fa0;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
+$danger: #b00e5b;
 $secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $textColor: #555;
+$black: #000;
 
 .modal {
   display: block;
@@ -24,9 +27,9 @@ $textColor: #555;
 
   .modal-content {
     box-shadow: 0 2px 11px 0 rgba(0, 0, 0, 0.5);
-    background: #333;
+    background: #222e44;
+    border: 1px solid #111824;
     margin: auto;
-    border: 1px solid #888;
     width: 25%;
     height: auto;
     color: white;
@@ -90,8 +93,8 @@ $textColor: #555;
       }
 
       button.btn-danger:hover {
-        background: $primary;
-        border-color: $primary;
+        background: $danger;
+        border-color: $danger;
       }
 
       button + button {
@@ -100,9 +103,15 @@ $textColor: #555;
         border-color: $secondary;
 
         &:hover {
-          background: $primary;
-          border-color: $primary;
-          color: white;
+          background: $primaryLight;
+          border-color: $primaryLight;
+          color: $hoverButtonText;
+        }
+        
+        &:hover {
+          background: $primaryActive;
+          border-color: $primaryActive;
+          color: $activeButtonText;
         }
       }
     }
