--- a/src/components/Path/Path.scss
+++ b/src/components/Path/Path.scss
@@ -1,10 +1,14 @@
 $white: #fff;
+$whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
-$primaryActive: #224fa0;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
+$danger: #b00e5b;
 $secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $textColor: #555;
 
 .path {
@@ -13,83 +17,57 @@ $textColor: #555;
   font-size: 15px;
   padding: 1px 0 0 5px;
   height: 40px;
-  background: #7b7b7b;
-  color: $white;
-  box-shadow: 0 2px 10px -4px gray;
+  background: #222e44;
+  color: #999;
+  box-shadow: 0 2px 10px -4px #222e44;
 
   .btn-group {
     width: 75px;
     margin-left: 15px;
     background: none;
     box-shadow: none;
-    background: #7b7b7b;
 
     .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
-      border-color: #7b7b7b;
-      background-color: #7b7b7b;
+      background: #222e44;
+      border: #222e44;
     }
 
     button {
       padding-left: 0;
       padding-right: 5px;
-      color: white;
-      background: #7b7b7b;
+      color: #999;
+      background: #222e44;
+      border: #222e44;
       transition: none;
       
       span {
-        color: #fff;
+        color: #999;
         padding: 0 0 0 5px;
       }
 
       &:active, &:focus {
-        background-color: #7b7b7b;
-        border-color: #7b7b7b;
+        background: #222e44;
+        border: #222e44;
       }
     }
 
     .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
       box-shadow: none;
       outline: none;
-      background-color: #7b7b7b;
-      border-color: #7b7b7b;
+      background: #222e44;
+      border: #222e44;
     }
 
     .btn-secondary {
       display: flex;
       justify-content: center;
       align-items: center;
-
-      &:hover {
-        color: $secondaryLight;
-        background: #7b7b7b;
-        border-color: #7b7b7b;
-
-        span {
-          color: $secondaryLight;
-        }
-      }
-
-      &:active {
-        color: $secondaryActive;
-
-        span {
-          color: $secondaryActive;
-        }
-      }
     }
   }
 
   .clickable {
     padding-top: 8px;
     cursor: pointer;
-  
-    &:hover {
-      color: $secondaryLight;
-    }
-
-    &:active {
-      color: $secondaryActive;
-    }
   }
 }
 
@@ -99,9 +77,9 @@ $textColor: #555;
   font-size: 15px;
   padding: 1px 0 0 5px;
   height: 40px;
-  background: #333;
+  background: #d7dcef;
   color: $white;
-  box-shadow: 0 2px 6px -2px gray;
+  box-shadow: 0 2px 6px -2px #d7dcef;
 
   .clickable-wrapper {
     display: flex;
@@ -113,18 +91,18 @@ $textColor: #555;
     width: 75px;
     background: none;
     box-shadow: none;
-    background: #333;
 
     .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
-      border-color: #333;
-      background-color: #333;
+      border-color: #d7dcef;
+      background: #d7dcef;
     }
 
     button {
       padding-left: 0;
       padding-right: 5px;
       color: white;
-      background: #333;
+      border-color: #d7dcef;
+      background: #d7dcef;
       transition: none;
 
       span {
@@ -133,45 +111,51 @@ $textColor: #555;
       }
 
       &:active, &:focus {
-        background-color: #333;
-        border-color: #333;
+        border-color: #d7dcef;
+        background: #d7dcef;
       }
     }
 
     .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
       box-shadow: none;
       outline: none;
-      background-color: #333;
-      border-color: #333;
+      border-color: #d7dcef;
+      background: #d7dcef;
     }
 
     .btn-secondary {
       display: flex;
       justify-content: center;
       align-items: center;
-      
+      color: $primary;
+
+      span {
+        color: $primary;
+      }
+
       &:hover {
-        color: $secondaryLight;
-        background: #333;
-        border-color: #333;
+        color: #1c3876;
+        border-color: #d7dcef;
+        background: #d7dcef;
 
         span {
-          color: $secondaryActive;
+          color: #1c3876;
         }
       }
     }
   }
 
   .clickable {
+    color: $primary;
     padding-top: 8px;
     cursor: pointer;
   
     &:hover {
-      color: $secondaryLight;
+      color: #1c3876;
     }
 
     &:active {
-      color: $secondaryActive;
+      color: $primary;
     }
   }
 }
