--- a/src/components/Server/Edit/EditServer.scss
+++ b/src/components/Server/Edit/EditServer.scss
@@ -1,10 +1,13 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
-$primaryActive: #224fa0;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
+$danger: #b00e5b;
 $secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $textColor: #555;
 
 .edit-server {
@@ -122,8 +125,13 @@ $textColor: #555;
           margin-right: 10px;
 
           &:hover {
-            color: white;
-            background: $primary;
+            color: $hoverButtonText;
+            background: $primaryLight;
+          }
+
+          &:hover {
+            color: $activeButtonText;
+            background: $primaryActive;
           }
         }
 
