--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -1,10 +1,13 @@
 $whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
-$primaryActive: #224fa0;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
 $secondary: #fcac04;
 $secondaryLight: #f8b014;
+$danger: #b00e5b;
 $secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
 $textColor: #555;
 
 .checkbox {
@@ -187,11 +190,11 @@ span.stat.email{
   }
 
   > div:nth-child(2) a:hover {
-    background: $primaryLight;
+    background: $primary;
   }
 
   > div:nth-child(4) a:hover {
-    background: #ff3438;
+    background: $danger;
   }
 
   svg {
