--- a/src/containers/ControlPanelContent/ControlPanelContent.scss
+++ b/src/containers/ControlPanelContent/ControlPanelContent.scss
@@ -1,6 +1,14 @@
+$whiteBackground: #ececec;
 $primary: #2c54ac;
-$primaryLight: #2e5bb1;
-$primaryActive: #224fa0;
+$primaryLight: #d7dcef;
+$primaryActive: #1e5cb2;
+$secondary: #fcac04;
+$secondaryLight: #f8b014;
+$danger: #b00e5b;
+$secondaryActive: #fdb51c;
+$hoverButtonText: #2c54ac;
+$activeButtonText: #fff;
+$textColor: #555;
 
 .content {
   padding: 0 13%;
@@ -53,10 +61,12 @@ $primaryActive: #224fa0;
     align-items: center;
   
     &:hover {
+      color: $hoverButtonText;
       background: $primaryLight;
     }
   
     &:active {
+      color: $activeButtonText;
       background: $primaryActive;
     }
   
@@ -79,17 +89,19 @@ $primaryActive: #224fa0;
   }
 
   > div:first-child {
+    color: #c3c3c3;
     background: none;
 
     &:hover {
       background: $primaryLight;
 
       button svg {
-        color: white;
+        color: $activeButtonText;
       }
     }
 
     &:active {
+      color: $activeButtonText;
       background: $primaryActive;
     }
 
