(fix/42) Redirect not an admin user when accessing restricted routes. Update top panel and stat menu when common user is active.

--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -32,7 +32,7 @@ $textColor: #555;
 
     &:hover {
       background: #b4b4b478;
-      color: $primaryLight;
+      color: $primary;
     }
   }
 }
