--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -49,7 +49,7 @@ $textColor: #555;
       background: $primary;
     
       &:hover {
-        color: white;
+        color: $primary;
         background: $primaryLight;
       }
     }
@@ -66,7 +66,7 @@ $textColor: #555;
       text-align: center;
   
       &:hover {
-        color: $primaryLight;
+        color: $primary;
       }
   
       &:focus {
