--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -52,7 +52,7 @@ $textColor: #555;
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0 5px;
+        padding: 0 10px;
         width: 100%;
         height: 100%;
         text-decoration: none;
@@ -93,7 +93,7 @@ $textColor: #555;
   }
 
   .left-menu {
-    width: 70%;
+    width: 75%;
     padding-left: 0;
 
     div {
@@ -129,9 +129,7 @@ $textColor: #555;
   }
 
   .profile-menu {
-    width: 30%;
-    justify-content: space-between;
-    align-items: center;
+    width: auto;
 
     div {
       width: 4rem;
@@ -190,12 +188,9 @@ $textColor: #555;
 }
 
 .top-panel.long-profile {
-  .left-menu {
-    width: 70%;
-  }
-
   .profile-menu {
-    width: 30%;
+    justify-content: space-between;
+    align-items: center;
 
     > div + div {
       width: max-content;
