--- a/src/components/MailAccount/Add/AddMailAccount.scss
+++ b/src/components/MailAccount/Add/AddMailAccount.scss
@@ -25,6 +25,7 @@
 
       .c-2 {
         width: 45%;
+        height: 100%;
         border: 1px solid #d9d9d9;
         padding: 0px 5px 12px 20px;
       }
