--- a/src/components/MainNav/Toolbar/Toolbar.scss
+++ b/src/components/MainNav/Toolbar/Toolbar.scss
@@ -1,3 +1,5 @@
+$primary: #2c54ac;
+
 .toolbar {
   display: flex;
   flex-direction: row;
@@ -17,19 +19,21 @@
     justify-content: center;
     align-items: center;
 
-    a.button-extra, button.button-extra {
+    a.button-extra,
+    button.button-extra {
       background: none;
       border: none;
       padding: 0 0.75rem;
       text-decoration: none;
       color: rgb(129, 125, 125);
-      font-size: 14px;
+      font-size: 15px;
+      font-weight: bold;
       display: flex;
       justify-content: center;
       align-items: center;
 
       &:hover {
-        color: rgb(78, 76, 76);
+      color: $primary;
       }
     }
     
