--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -95,12 +95,14 @@ $textColor: #555;
   .left-menu {
     width: 75%;
     padding-left: 0;
+    margin-left: 0;
+    justify-content: space-between;
 
     div {
-      width: 7rem;
+      width: max-content;
       height: 100%;
       transform: translateX(-5px);
-      padding-right: 5px;
+      padding: 0 10px;
 
       &:hover {
         background: $secondaryLight;
@@ -108,8 +110,17 @@ $textColor: #555;
     }
 
     div.logo {
-      img {
-        width: 90%;
+      width: 7rem;
+      padding-left: 0;
+
+      a {
+        div {
+          padding: 0;
+
+          img {
+            width: 100%;
+          }
+        }
       }
 
       &:hover {
@@ -188,6 +199,21 @@ $textColor: #555;
 }
 
 .top-panel.long-profile {
+  .left-menu {
+    justify-content: start;
+
+    > div {
+      width: max-content;
+      padding: 0 2rem;
+    }
+
+    .logo {
+      width: 7rem;
+      padding: 0;
+      margin-right: 1rem;
+    }
+  }
+
   .profile-menu {
     justify-content: space-between;
     align-items: center;
