--- a/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
+++ b/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
@@ -32,7 +32,7 @@ $errorColor: #BE5ABF;
   
     div.error,
     div.success {
-      width: fit-content !important;
+      width: max-content !important;
   
       span {
         font-weight: bold;
@@ -40,6 +40,7 @@ $errorColor: #BE5ABF;
   
         svg {
           font-size: 13px;
+          margin-right: 10px;
         }
       }
   
