--- a/src/components/MainNav/Toolbar/Toolbar.scss
+++ b/src/components/MainNav/Toolbar/Toolbar.scss
@@ -21,9 +21,9 @@ $textColor: #555;
   left: 0;
   width: 100%;
   z-index: 1;
-  padding: 0 13%;
+  padding: 3px 10% 1px;
+  border-top: 1px solid #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
-  padding-top: 5px;
 
   .r-menu {
     display: flex;
@@ -153,7 +153,7 @@ $textColor: #555;
 
 @media (max-width: 1350px) {
   .toolbar {
-    padding: 5px 10% 0;
+    padding: 3px 10% 1px;
   }
 }
 
