--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -1,4 +1,5 @@
 @import 'src/utils/scss/variables';
+@import 'src/utils/scss/breakpoints';
 
 .top-panel.small-device {
   display: none;
@@ -15,7 +16,8 @@
   background: #222e44;
   height: 34px;
   align-items: center;
-  padding: 0 13%;
+  justify-content: space-between;
+  padding: 0 10%;
   z-index: 2;
 
   .container {
@@ -44,7 +46,7 @@
         justify-content: center;
         align-items: center;
         padding: 0 10px !important;
-        width: 100%;
+        width: max-content;
         height: 100%;
         text-decoration: none;
         color: white;
@@ -85,8 +87,8 @@
 
   .left-menu {
     width: 75%;
-    padding-left: 0;
-    margin-left: 0;
+    margin: 0;
+    padding: 0;
     justify-content: space-between;
 
     div {
@@ -132,7 +134,10 @@
   }
 
   .profile-menu {
-    width: auto;
+    width: 25%;
+    margin: 0;
+    padding: 0;
+    justify-content: flex-end;
 
     div {
       height: 100%;
@@ -231,20 +236,19 @@
   }
 }
 
-@media screen and (max-width: 1350px) {
+@media screen and (min-width: $desktopMax) {
   .top-panel {
     padding: 0 10%;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: $desktopMin) {
   .top-panel {
-    padding: 0 5%;
+    padding: 0 8%;
   }
 }
 
-//Small Devices
-@media (max-width: 900px) {
+@media (max-width: 1065px) {
   .top-panel {
     display: none;
   }
@@ -256,11 +260,8 @@
     > .container {
       justify-content: center;
       align-items: center;
-      width: 30%;
-    }
-
-    .profile-menu {
-      padding-left: 10%;
+      flex: 1 1 auto;
+      width: auto;
     }
 
     .hamburger {
@@ -290,23 +291,12 @@
   }
 }
 
-@media (max-width: 420px) {
-  .top-panel.small-device {
-    .profile-menu {
-      padding: 0;
-      margin-right: 5px;
+@media (max-width: $phoneMax) {
+  .top-panel .left-menu div.logo {
+    width: unset;
 
-      .bell {
-        width: 20%;
-      }
-
-      .bell + div {
-        width: 40%;
-      }
-
-      .bell + div + div {
-        width: 40%;
-      }
+    a div {
+      width: 5rem;
     }
   }
 }
