--- a/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
+++ b/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
@@ -55,6 +55,7 @@ $errorColor: #BE5ABF;
     }
   
     .search-toolbar-name {
+      width: auto !important;
       padding: 10px 0;
       margin-left: 0;
     }
@@ -122,6 +123,18 @@ $errorColor: #BE5ABF;
       textarea,
       select {
         width: 50%;
+      }
+    }
+
+    @media screen and (max-width: 900px) {
+      .form-group {
+        input[type=text],
+        input[type=password],
+        input[type=email],
+        textarea,
+        select {
+          width: 100%;
+        }
       }
     }
 
