--- a/src/components/MainNav/Mobile/MobileTopNav.scss
+++ b/src/components/MainNav/Mobile/MobileTopNav.scss
@@ -15,9 +15,10 @@
   display: flex;
   flex-direction: column;
   animation: showMobileNav forwards .3s;
-  margin-top: 89px;
+  margin-top: 82px;
 
   .mobile-menu {
+    padding: 0 10%;
     flex-wrap: wrap;
     margin-top: 15px;
   }
@@ -98,7 +99,7 @@
       height: auto;
       min-height: auto;
       padding: 0;
-      margin-top: 20px;
+      margin-top: 9px;
 
       .menu-stat {
         margin: 0;
@@ -133,8 +134,6 @@
 
 @media (max-width: 725px) {
   .mobile-top-nav-wrapper.show {
-    margin-top: 182px;
-
     .menu-stat {
       display: flex;
       flex-wrap: wrap;
