Renamed all max-content width values to fit-content. Bell svg icon has now harcoded size not to overlap nearby elements.

--- a/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
+++ b/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
@@ -23,7 +23,7 @@ $errorColor: #BE5ABF;
   
     div.error,
     div.success {
-      width: max-content !important;
+      width: fit-content !important;
   
       span {
         font-weight: bold;
@@ -211,7 +211,7 @@ $errorColor: #BE5ABF;
     label.label-wrapper {
       display: flex;
       align-items: flex-end;
-      width: max-content;
+      width: fit-content;
 
       span {
         font-weight: normal;
