--- a/src/components/MainNav/Panel/Panel.scss
+++ b/src/components/MainNav/Panel/Panel.scss
@@ -46,7 +46,7 @@
         justify-content: center;
         align-items: center;
         padding: 0 10px !important;
-        width: max-content;
+        width: fit-content;
         height: 100%;
         text-decoration: none;
         color: white;
@@ -150,8 +150,8 @@
 
       svg {
         border-radius: 30px;
-        width: 100%;
-        height: 100%;
+        width: 40px;
+        height: 30px;
         padding: 3px;
 
         &:hover {
@@ -199,7 +199,7 @@
     justify-content: start;
 
     > div {
-      width: max-content;
+      width: fit-content;
       flex: unset;
       padding: 0 1rem;
     }
@@ -216,7 +216,7 @@
     align-items: center;
 
     > .edit-user {
-      width: max-content;
+      width: fit-content;
     }
 
     .long-username {
