--- a/src/components/MainNav/Toolbar/LeftButton/LeftButton.scss
+++ b/src/components/MainNav/Toolbar/LeftButton/LeftButton.scss
@@ -51,7 +51,7 @@
     }
 
     span.add {
-      width: fit-content;
+      width: max-content;
       display: none;
       padding: 4px 10px 4px 25px;
       background: $primary;
