(172) Fixed mail account notification sender.

--- a/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
+++ b/src/components/ControlPanel/AddItemLayout/AddItemLayout.scss
@@ -58,6 +58,7 @@ $errorColor: #BE5ABF;
       width: auto !important;
       padding: 10px 0;
       margin-left: 0;
+      margin-right: 10px;
     }
   }
 }
